# AI-PR-Review-Tool

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DESIGN.md
src/ai_pr_review_tool/: __init__.py  analyzer.py  api.py  cli.py  comment_renderer.py  config.py  context.py  diff_parser.py  github_client.py  heuristics.py  llm.py  schemas.py  service.py
src/ai_pr_review_tool/static/: index.html
tests/: test_comment_renderer.py  test_diff_parser.py  test_github_client.py  test_heuristics.py
