[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-pr-review-tool"
version = "0.1.0"
description = "AI-assisted GitHub Pull Request review tool with summaries, risk detection, and review suggestions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AI PR Review Tool" }]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "openai>=1.40",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
ai-pr-review = "ai_pr_review_tool.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pr_review_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
